# aurora-compositor

./: CMakeLists.txt  README.md  features.cmake
src/compositor/: CMakeLists.txt  Liri1AuroraCompositorDependencies.cmake.in  LiriAuroraCompositorMacros.cmake  compositor.qrc
src/compositor/compat/: removed_api.cpp
src/compositor/compositor_api/: aurorawaylandbufferref.cpp  aurorawaylandbufferref.h  aurorawaylandclient.cpp  aurorawaylandclient.h  aurorawaylandcompositor.cpp  aurorawaylandcompositor.h  aurorawaylandcompositor_p.h  aurorawaylandcompositorquickextensions.cpp  aurorawaylandcompositorquickextensions_p.h  aurorawaylanddestroylistener.cpp  aurorawaylanddestroylistener.h  aurorawaylanddestroylistener_p.h  aurorawaylanddrag.cpp  aurorawaylanddrag.h  aurorawaylandinputmethodcontrol.cpp  aurorawaylandinputmethodcontrol.h  aurorawaylandinputmethodcontrol_p.h  aurorawaylandkeyboard.cpp  aurorawaylandkeyboard.h  aurorawaylandkeyboard_p.h  aurorawaylandkeymap.cpp  aurorawaylandkeymap.h  aurorawaylandkeymap_p.h  aurorawaylandmousetracker.cpp  aurorawaylandmousetracker_p.h  aurorawaylandoutput.cpp  aurorawaylandoutput.h  aurorawaylandoutput_p.h  aurorawaylandoutputmode.cpp  aurorawaylandoutputmode.h  aurorawaylandoutputmode_p.h  aurorawaylandpointer.cpp  aurorawaylandpointer.h  aurorawaylandpointer_p.h  aurorawaylandquickchildren.h  aurorawaylandquickcompositor.cpp  aurorawaylandquickcompositor.h  aurorawaylandquickhardwarelayer.cpp  aurorawaylandquickhardwarelayer_p.h  aurorawaylandquickitem.cpp  (+23 more)
src/compositor/doc/: auroracompositor.qdocconf  qtwaylandcompositor.qdocconf
src/compositor/doc/src/: qt6-changes.qdoc  qtwaylandcompositor-cpp.qdoc  qtwaylandcompositor-qmltypes.qdoc
src/compositor/extensions/: aurorawaylandextsessionlockv1.cpp  aurorawaylandextsessionlockv1.h  aurorawaylandextsessionlockv1_p.h  aurorawaylandextsessionlockv1integration.cpp  aurorawaylandextsessionlockv1integration_p.h  aurorawaylandfluiddecorationv1.cpp  aurorawaylandfluiddecorationv1.h  aurorawaylandfluiddecorationv1_p.h  aurorawaylandidleinhibitv1.cpp  aurorawaylandidleinhibitv1.h  aurorawaylandidleinhibitv1_p.h  aurorawaylandiviapplication.cpp  aurorawaylandiviapplication.h  aurorawaylandiviapplication_p.h  aurorawaylandivisurface.cpp  aurorawaylandivisurface.h  aurorawaylandivisurface_p.h  aurorawaylandivisurfaceintegration.cpp  aurorawaylandivisurfaceintegration_p.h  aurorawaylandpresentationtime.cpp  aurorawaylandpresentationtime_p.h  aurorawaylandpresentationtime_p_p.h  aurorawaylandqttextinputmethod.cpp  aurorawaylandqttextinputmethod.h  aurorawaylandqttextinputmethod_p.h  aurorawaylandqttextinputmethodmanager.cpp  aurorawaylandqttextinputmethodmanager.h  aurorawaylandqttextinputmethodmanager_p.h  aurorawaylandqtwindowmanager.cpp  aurorawaylandqtwindowmanager.h  aurorawaylandqtwindowmanager_p.h  aurorawaylandquickshellintegration.cpp  aurorawaylandquickshellintegration.h  aurorawaylandquickshellsurfaceitem.cpp  aurorawaylandquickshellsurfaceitem.h  aurorawaylandquickshellsurfaceitem_p.h  aurorawaylandquickwlroutputmanagementv1.cpp  aurorawaylandquickwlroutputmanagementv1.h  aurorawaylandquickxdgoutputv1.cpp  aurorawaylandquickxdgoutputv1.h  (+71 more)
src/compositor/global/: auroraqmlinclude.h  aurorawaylandcompositorextension.cpp  aurorawaylandcompositorextension.h  aurorawaylandcompositorextension_p.h  aurorawaylandqmlinclude.h  aurorawaylandquickextension.cpp  aurorawaylandquickextension.h  aurorawaylandquickextension.qdoc  aurorawaylandutils_p.h  liriauroracompositorfeatures.h.in  qtwaylandcompositorglobal.h  qtwaylandcompositorglobal_p.h  qtwaylandqmlinclude.h  qwaylandquickextension.qdoc
src/compositor/hardware_integration/: aurorawlclientbufferintegration.cpp  aurorawlclientbufferintegration_p.h  aurorawlclientbufferintegrationfactory.cpp  aurorawlclientbufferintegrationfactory_p.h  aurorawlclientbufferintegrationplugin.cpp  aurorawlclientbufferintegrationplugin_p.h  aurorawlhardwarelayerintegration.cpp  aurorawlhardwarelayerintegration_p.h  aurorawlhardwarelayerintegrationfactory.cpp  aurorawlhardwarelayerintegrationfactory_p.h  aurorawlhardwarelayerintegrationplugin.cpp  aurorawlhardwarelayerintegrationplugin_p.h  aurorawlhwintegration.cpp  aurorawlhwintegration_p.h  aurorawlserverbufferintegration.cpp  aurorawlserverbufferintegration_p.h  aurorawlserverbufferintegrationfactory.cpp  aurorawlserverbufferintegrationfactory_p.h  aurorawlserverbufferintegrationplugin.cpp  aurorawlserverbufferintegrationplugin_p.h  aurorawltextureorphanage.cpp  aurorawltextureorphanage_p.h
src/compositor/qmlfiles/: WaylandCursorItem.qml  WaylandOutputWindow.qml
src/compositor/utils/: aurorafactoryloader.cpp  aurorafactoryloader_p.h  auroraunixutils_p.h
src/compositor/wayland_wrapper/: aurorawlbuffermanager.cpp  aurorawlbuffermanager_p.h  aurorawlclientbuffer.cpp  aurorawlclientbuffer_p.h  aurorawldatadevice.cpp  aurorawldatadevice_p.h  aurorawldatadevicemanager.cpp  aurorawldatadevicemanager_p.h  aurorawldataoffer.cpp  aurorawldataoffer_p.h  aurorawldatasource.cpp  aurorawldatasource_p.h  aurorawlregion.cpp  aurorawlregion_p.h
src/imports/compositor-extensions/ext/: CMakeLists.txt  auroraextplugin.cpp  qmldir
src/imports/compositor-extensions/iviapplication/: CMakeLists.txt  aurorawaylandcompositoriviapplicationplugin.cpp  plugins.qmltypes  qmldir
src/imports/compositor-extensions/presentationtime/: CMakeLists.txt  aurorawaylandcompositorpresentationtimeplugin.cpp  qmldir
src/imports/compositor-extensions/wlrlayershell/: CMakeLists.txt  auroracompositorwlrlayershellplugin.cpp  qmldir
src/imports/compositor-extensions/wlroots/: CMakeLists.txt  auroracompositorwlrootsplugin.cpp  qmldir
src/imports/compositor-extensions/wlshell/: CMakeLists.txt  aurorawaylandcompositorwlshellplugin.cpp  plugins.qmltypes  qmldir
src/imports/compositor-extensions/xdgshell/: CMakeLists.txt  qmldir  (+2 more)
src/platformsupport/eglfsxkb/: CMakeLists.txt  eglfsxkb.cpp  eglfsxkb.h
tests/auto/logind/: CMakeLists.txt  fakelogind.cpp  fakelogind.h  tst_logind.cpp
tests/auto/udev/: CMakeLists.txt  test.umockdev  tst_udev.cpp
(+322 files in other folders)
